[workspace]
resolver = "2"
members = [
	"crates/starknet-devnet-types",
	"crates/starknet-devnet-core",
	"crates/starknet-devnet-server",
	"crates/starknet-devnet",
]

[profile.release]
panic = "unwind"

[workspace.package]
authors = ["Mario"]
edition = "2021"
repository = "https://github.com/0xSpaceShard/starknet-devnet-rs"
license-file = "LICENSE"
homepage = "https://github.com/0xSpaceShard/starknet-devnet-rs"
description = "A local testnet for Starknet"
readme = "README.md"
documentation = "https://github.com/0xSpaceShard/starknet-devnet-rs"

exclude = [".github/**", ".devcontainer/**", ".circleci/**"]

keywords = ["starknet", "cairo", "testnet", "local", "server"]


[workspace.dependencies]
# axum
axum = { version = "0.5" }
hyper = "0.14"
tower-http = { version = "0.4", features = ["full"] }
tower = { version = "0.4", features = ["full"] }

# async
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread", "signal"] }
futures = "0.3"
async-trait = "0.1"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# misc
base64 = { version = "0.21.2" }
clap = { version = "4.3.2", features = ["derive"] }
flate2 = { version = ">= 1.0.26, < 1.0.27" }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0.81" }
serde_yaml = { version = "0.9.27" }
thiserror = { version = "1.0.32" }
anyhow = "1"
indexmap = "2.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_mt = "4.2.2"
regex_generate = "0.2.3"
url = "2.4"

# Starknet dependencies
starknet_api = { version = "0.6.0-rc2", features = ["testing"] }
blockifier = { path = "../blockifier/crates/blockifier", package = "blockifier" }
starknet-rs-signers = { version = "0.7.0", package="starknet-signers" }
starknet-rs-ff = { version = "0.3.6", package = "starknet-ff" }
starknet-rs-core = {  version = "0.9.0", package = "starknet-core" }
starknet-rs-providers = {  version = "0.9.0", package = "starknet-providers" }
starknet-rs-accounts = { version = "0.8.0", package = "starknet-accounts" }
starknet-rs-contract = { version = "0.8.0", package = "starknet-contract" }
starknet-rs-crypto = { version = "0.6.1", package = "starknet-crypto" }

# Cairo-lang dependencies
cairo-lang-starknet = { path = "../cairo/crates/cairo-lang-starknet", package = "cairo-lang-starknet" }
cairo-lang-compiler = { path = "../cairo/crates/cairo-lang-compiler" }
cairo-lang-casm = { path = "../cairo/crates/cairo-lang-casm" }
cairo-lang-defs = { path = "../cairo/crates/cairo-lang-defs" }
cairo-lang-diagnostics = { path = "../cairo/crates/cairo-lang-diagnostics" }
cairo-lang-filesystem = { path = "../cairo/crates/cairo-lang-filesystem" }
cairo-lang-lowering = { path = "../cairo/crates/cairo-lang-lowering" }
cairo-lang-semantic = { path = "../cairo/crates/cairo-lang-semantic" }
cairo-lang-sierra = { path = "../cairo/crates/cairo-lang-sierra" }
cairo-lang-sierra-generator = { path = "../cairo/crates/cairo-lang-sierra-generator" }
cairo-lang-sierra-to-casm = { path = "../cairo/crates/cairo-lang-sierra-to-casm" }
cairo-lang-syntax = { path = "../cairo/crates/cairo-lang-syntax" }
cairo-lang-utils = { path = "../cairo/crates/cairo-lang-utils" }

# Inner dependencies
starknet-types = { version = "0.0.1", path = "crates/starknet-devnet-types", package = "starknet-devnet-types" }
starknet-core = { version = "0.0.2", path = "crates/starknet-devnet-core", package = "starknet-devnet-core" }
server = { version = "0.0.2", path = "crates/starknet-devnet-server", package = "starknet-devnet-server"}

num-bigint = { version = "0.4" }

lazy_static = { version = "1.4.0" }
ethers = { version = "2.0.11" }
